# Nozomi

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ERASE_METHOD.md  LICENCE-MIT.md  MIGRATION.md  README  README.md  SECURITY.md  test.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature_request.yml
.github/workflows/: auto_merge.yml  publish.yml  rust_ci.yml  test_ci.yml
old.test/: entity_test.rs
src/: analyze.rs  error.rs  lib.rs  method.rs  methods.rs  models.rs  overwrite.rs  utils.rs
src/api/: mod.rs
src/api/delete/: builder.rs  legacy.rs  mod.rs  report.rs  request.rs
src/engine/: events.rs  executor.rs  mod.rs  planner.rs  utils.rs  verify.rs
src/engine/overwrite/: afssi_5020.rs  common.rs  dod_522022_me.rs  dod_522022_mece.rs  gutmann.rs  hmgi_s5.rs  mod.rs  pseudo_random.rs  rcmp_tssit_ops_ii.rs
src/enums/: erase_method.rs  error.rs  mod.rs  success.rs
src/error/: ehanced.rs  enhanced.rs  mod.rs  standard.rs
src/methods/: afssi_5020.rs  dod_522022_me.rs  dod_522022_mece.rs  gutmann.rs  hmgi_s5.rs  mod.rs  pseudo_random.rs  rcmp_tssit_ops_ii.rs
src/test/: mod.rs  overwrite.rs
src/tests/: ehanced.rs  enhanced.rs  mod.rs  standard.rs
tests/: analyze_integration.rs  dry_run_integration.rs  entity_test.rs  feature_independence.rs  features_compile.rs  no_default_features.rs  overwrite.rs  test_export.rs  utils.rs
tests/events/: emission_order.rs  error_behavior.rs  mod.rs  sink_isolation.rs
