[package]
name = "nozomi"
version = "3.0.3"
edition = "2024"

authors = ["Sans-Atout <augustin.rousset-rouviere@isep.fr>"]
description = "Equivalent of the Linux shred command but in rust and library. Allows you to securely erase data from a hard drive."
keywords = ["security", "erase", "eraser", "wiping", "wiper"]

license = "GPL-3.0"
repository = "https://github.com/Sans-Atout/Nozomi/"

[dependencies]
error-stack = {version = "0.5.0",optional=true}
rand = "0.9.1"
md5 = { version = "0.7.0", optional=true}

[dependencies.log]
version = "0.4.27"
optional = true

[lints.rust]
unsafe_code="forbid"

[dev-dependencies]
pretty_assertions = "1.4.1"

[features]
error-stack = ["dep:error-stack"]
log = ["dep:log"]
secure_log = ["log","dep:md5"]

[badges]
maintenance = { status = "actively-developed" }