[package]
name = "nozomi"
version = "3.1.1"
edition = "2024"
rust-version = "1.85"

authors = ["Sans-Atout <augustin@rousset-rouviere.fr>"]
description = "Equivalent of the Linux shred command but in rust and library. Allows you to securely erase data from a hard drive."
keywords = ["security", "erase", "eraser", "wiping", "wiper"]

license = "MIT OR Apache-2.0"
repository = "https://github.com/Sans-Atout/Nozomi/"

[dependencies]
error-stack = {version = "0.7.0",optional=true}
rand = "0.10.1"
md5 = { version = "0.8.0", optional=true}

[dependencies.log]
version = "0.4.29"
optional = true

[lints.rust]
unsafe_code="forbid"

[dev-dependencies]
pretty_assertions = "1.4.1"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []

# Functional capabilities
verify = []
dry-run = []
analyze = []

# Error handling
error-stack = ["dep:error-stack"]

# Logging
log = ["dep:log"]
secure_log = ["log", "dep:md5"]